Add swagger docs to /api/events
